--- a/EXTRA_CREDIT.html
+++ b/EXTRA_CREDIT.html
@@ -14,20 +14,28 @@
 
 <title>Extra credit options</title>
 
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<style>h1 {font-size: 34px;}
+       h1.title {font-size: 38px;}
+       h2 {font-size: 30px;}
+       h3 {font-size: 24px;}
+       h4 {font-size: 18px;}
+       h5 {font-size: 16px;}
+       h6 {font-size: 12px;}
+       code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
+       pre:not([class]) { background-color: white }</style>
 <script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
-<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -39,11 +47,6 @@
     </style>
 
 <style type="text/css">code{white-space: pre;}</style>
-<style type="text/css">
-  pre:not([class]) {
-    background-color: white;
-  }
-</style>
 <script type="text/javascript">
 if (window.hljs) {
   hljs.configure({languages: []});
@@ -56,32 +59,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">
-h1 {
-  font-size: 34px;
-}
-h1.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
-}
-.table th:not([align]) {
-  text-align: left;
-}
-</style>
+
 
 
 
@@ -91,10 +69,6 @@ h6 {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
-}
-code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
 }
 img {
   max-width:100%;
@@ -111,40 +85,13 @@ button.code-folding-btn:focus {
 summary {
   display: list-item;
 }
+pre code {
+  padding: 0;
+}
 </style>
 
 
 <style type="text/css">
-/* padding for bootstrap navbar */
-body {
-  padding-top: 52px;
-  padding-bottom: 40px;
-}
-/* offset scroll position for anchor links (for fixed navbar)  */
-.section h1 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h2 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h3 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h4 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h5 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
-.section h6 {
-  padding-top: 57px;
-  margin-top: -57px;
-}
 .dropdown-submenu {
   position: relative;
 }
@@ -172,7 +119,7 @@ body {
   margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-  border-left-color: #ffffff;
+  border-left-color: #adb5bd;
 }
 .dropdown-submenu.pull-left {
   float: none;
@@ -184,7 +131,7 @@ body {
 }
 </style>
 
-<script>
+<script type="text/javascript">
 // manage active state of menu based on current page
 $(document).ready(function () {
   // active menu anchor
@@ -195,10 +142,23 @@ $(document).ready(function () {
   var menuAnchor = $('a[href="' + href + '"]');
 
   // mark it active
-  menuAnchor.parent().addClass('active');
+  menuAnchor.tab('show');
 
   // if it's got a parent navbar menu mark it active as well
   menuAnchor.closest('li.dropdown').addClass('active');
+
+  // Navbar adjustments
+  var navHeight = $(".navbar").first().height() + 15;
+  var style = document.createElement('style');
+  var pt = "padding-top: " + navHeight + "px; ";
+  var mt = "margin-top: -" + navHeight + "px; ";
+  var css = "";
+  // offset scroll position for anchor links (for fixed navbar)
+  for (var i = 1; i <= 6; i++) {
+    css += ".section h" + i + "{ " + pt + mt + "}\n";
+  }
+  style.innerHTML = "body {" + pt + "padding-bottom: 40px; }\n" + css;
+  document.head.appendChild(style);
 });
 </script>
 
@@ -210,7 +170,6 @@ $(document).ready(function () {
   max-height: 500px;
   min-height: 44px;
   overflow-y: auto;
-  background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
@@ -336,7 +295,7 @@ div.tocify {
 
 
 <!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row-fluid">
+<div class="row">
 <div class="col-xs-12 col-sm-4 col-md-3">
 <div id="TOC" class="tocify">
 </div>
@@ -487,27 +446,27 @@ div.tocify {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div id="header">
 
 
 
 <h1 class="title toc-ignore">Extra credit options</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2021</h4>
+<h4 class="date">Spring 2022</h4>
 
 </div>
 
 
-<p>You may submit up to four extra credit essays – a maximum of two of each of the options listed below…</p>
+<p>You may submit up to two extra credit essays – one for each of the options listed below…</p>
 <div id="extra-credit-option-1-journal-article-response" class="section level2">
 <h2>Extra Credit Option 1 – Journal Article Response</h2>
-<div id="total-points-possible-10-up-to-two-submissions" class="section level4">
-<h4>Total points possible: 10 (up to two submissions)</h4>
+<div id="total-points-possible-10-one-submission" class="section level4">
+<h4>Total points possible: 10 (one submission)</h4>
 <p><strong>Due at the end of finals period</strong></p>
 <p><strong>Objectives:</strong><br />
 1. Connect the content of this course with active research areas in the expanding, dynamic field of population ecology.<br />
 2. Engage with original scientific literature in this field of study.</p>
-<p>Select a <em>peer-reviewed journal article</em> on a topic <em>relevant to population ecology</em>.</p>
+<p>Select a <em>peer-reviewed journal article</em> on a topic <em>relevant to applied population ecology</em>.</p>
 <ul>
 <li>The article should develop a population model to address a conservation or management question - The article could present newly collected data that were then analyzed to parameterize a population model, <em>OR</em> could present an analysis of already existing data to develop a different population model than has already been developed for the species/system. - For an example of the type of article you should look for (PDF is in the “Files” folder on WebCampus and linked to the assignment page):</li>
 </ul>
@@ -520,9 +479,9 @@ div.tocify {
 <li>Use essay format: write in complete sentences and coherent paragraphs.</li>
 <li>Three main elements to write about:
 <ul>
-<li>Summarize <strong>main methods and results</strong></li>
-<li>Identify <strong>how the research was applied</strong> to a particular conservation or management issue, and describe the relationship between the research and the contents of this course.</li>
-<li>Provide <strong>your personal response</strong> to the article - why did you choose to read it, what did you like about it, and what did you learn?</li>
+<li>Summarize <strong>research questions, main methods and results</strong></li>
+<li>Identify <strong>how the research was applied</strong> to a particular conservation or management issue, and describe the relationship between the research and the contents of this course. Please be as specific as possible about how the course concepts link to your chosen article.</li>
+<li>Provide <strong>your personal response</strong> to the article - why did you choose to read it, and what did you learn?</li>
 </ul></li>
 </ol>
 <p>Upload your written response and a PDF of the journal article to WebCampus.</p>
@@ -530,8 +489,8 @@ div.tocify {
 </div>
 <div id="extra-credit-option-2-population-ecology-talk" class="section level2">
 <h2>Extra Credit Option #2 – Population Ecology Talk</h2>
-<div id="total-points-possible-10-up-to-2-submissions" class="section level4">
-<h4>Total points possible: 10 (up to 2 submissions)</h4>
+<div id="total-points-possible-10-one-submission-1" class="section level4">
+<h4>Total points possible: 10 (one submission)</h4>
 <p><strong>Due at the end of finals period</strong></p>
 <p><strong>Objectives:</strong></p>
 <ol style="list-style-type: decimal">
@@ -554,9 +513,9 @@ div.tocify {
 <li>Use essay format: write in complete sentences and coherent paragraphs.</li>
 <li>Three main facets to write about:
 <ul>
-<li>What themes/models/dynamics were discussed that are <strong>directly related</strong> to what you’ve learned about in class?</li>
+<li>What themes/models/dynamics were discussed that are <strong>directly related</strong> to what you’ve learned about in class? Please be as specific as possible about how the course concepts link to your chosen talk.</li>
 <li>What was the <strong>conservation or management issue</strong> that the researcher(s) addressed? What surprising or novel findings did the researcher(s) present?</li>
-<li>Provide <strong>your personal response</strong> to the talk - why did you choose to attend, and what did you like about it? Was there anything that was unclear or that you would like to learn more about?</li>
+<li>Provide <strong>your personal response</strong> to the talk - why did you choose to attend? Was there anything that was unclear or that you would like to learn more about?</li>
 </ul></li>
 </ol>
 <p>Upload your written response to WebCampus.</p>
@@ -564,122 +523,130 @@ div.tocify {
 <div id="grading-rubric-option-1" class="section level4">
 <h4>Grading Rubric, option 1:</h4>
 <table>
+<colgroup>
+<col width="23%" />
+<col width="72%" />
+<col width="4%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Criteria</th>
 <th align="left">Details</th>
-<th align="right">Points.Possible</th>
+<th align="left">Points.Possible</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">Article selection</td>
-<td align="left">Provide complete citation of journal article at the top of your written response:</td>
-<td align="right">1</td>
+<td align="left">Talk selection</td>
+<td align="left">Provide complete information about the talk you attended (speaker, title, location/institution, website (if applicable).</td>
+<td align="left">1</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">(1) Peer-reviewed</td>
-<td align="right">NA</td>
+<td align="left">(1) Topic relevant to course</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
-<td align="left">(2) Topic relevant to course</td>
-<td align="right">NA</td>
-</tr>
-<tr class="even">
-<td align="left">Summary</td>
+<td align="left">Concepts relevant to course</td>
 <td align="left">One or two paragraphs:</td>
-<td align="right">3</td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">(1) Identify main research question or hypothesis.</td>
-<td align="right">NA</td>
+<td align="left">3</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">(2) Accurately summarize relevant methods</td>
-<td align="right">NA</td>
+<td align="left">(1) Identify specific concepts discussed in the talk that we’ve been learning about in class.</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">·         How were data gathered?</td>
-<td align="right">NA</td>
+<td align="left">(2) How were these concepts presented in the talk?</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">·         What analyses were performed to estimate model parameters?</td>
-<td align="right">NA</td>
+<td align="left">·         What was familiar about how the concepts were discussed?</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">·         How was the final model selected?</td>
-<td align="right">NA</td>
+<td align="left">·         What, if anything, did you learn about these concepts that you hadn’t considered before or that you were unaware about?</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">·         Note: Do your best to use plain English for this summary, highlighting what makes sense to you in terms of what we’ve gone over in class.</td>
-<td align="right">NA</td>
+<td align="left">(3) Identify one concept in the talk that either (a) has not been discussed in class, or (b) has been discussed in class but you’d like to learn about it in more depth.</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
-<td align="left">(3) Accurately relay main findings, conclusions, and/or importance of findings in an ecological context.</td>
-<td align="right">NA</td>
-</tr>
-<tr class="even">
-<td align="left">Describe application of research to conserve-ation or management</td>
+<td align="left">Describe application of research/ information to conserve-ation or man-agement</td>
 <td align="left">One or two paragraphs</td>
-<td align="right">3</td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">(1) How does this article apply the principles of population ecology to a relevant management or conservation problem?</td>
-<td align="right">NA</td>
+<td align="left">3</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">(2) How could these methods/approaches be applied to a similar (or different!) system, conservation problem, or management issue?</td>
-<td align="right">NA</td>
+<td align="left">(1) What management or conservation problem was the talk primarily concerned with?</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">(3) What, if anything, was novel or unusual about this approach or method? Does this article advance the field of population ecology or our understanding of the particular ecological system?</td>
-<td align="right">NA</td>
+<td align="left">·         Explain the management or conservation challenge.</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
+<td align="left"></td>
+<td align="left">·         Summarize how the researcher attempted to address the challenge using population ecology.</td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">(2) Do you think the researcher’s approach could be generalized to other systems or species? Why or why not?</td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">(3) Are you satisfied that the researcher(s) solved the problem? Why or why not?</td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
 <td align="left">Personal response</td>
 <td align="left">One or two paragraphs</td>
-<td align="right">3</td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">(1) Why did you select this article?</td>
-<td align="right">NA</td>
+<td align="left">3</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
-<td align="left">(2) What relevance does this article have for either your work in this class, your degree program, and/or your present or future career?</td>
-<td align="right">NA</td>
+<td align="left">(1) What did you find particularly effective about this talk?</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">(3) If you were to perform this same study, would you keep everything the same? What would you change?</td>
-<td align="right">NA</td>
+<td align="left">·         For example: was the researcher a particularly dynamic speaker? Did the audience ask a really insightful question that left you thinking more about the talk? Were the visuals provided effective at communicating essential information?</td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">(2) If you had to summarize the talk’s “take-away” message in one sentence, what would that sentence be?</td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">(3) If you were to give a similar presentation to a similar audience, what would you choose to borrow from this talk in order to be an effective communicator? Is there anything you would do differently to make your message more clearly understood?</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">(4) What did you find particularly interesting, intriguing, or surprising about this study?</td>
-<td align="right">NA</td>
-</tr>
-<tr class="odd">
-<td align="left">#### Grading Rubric, option 2:</td>
 <td align="left"></td>
-<td align="right"></td>
 </tr>
 </tbody>
 </table>
+</div>
+<div id="grading-rubric-option-2" class="section level4">
+<h4>Grading Rubric, option 2:</h4>
 <table>
+<colgroup>
+<col width="23%" />
+<col width="72%" />
+<col width="4%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Criteria</th>
@@ -843,7 +810,7 @@ $(document).ready(function () {
 
 $(document).ready(function () {
   $('.tabset-dropdown > .nav-tabs > li').click(function () {
-    $(this).parent().toggleClass('nav-tabs-open')
+    $(this).parent().toggleClass('nav-tabs-open');
   });
 });
 </script>
@@ -852,6 +819,9 @@ $(document).ready(function () {
 
 <script>
 $(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
 
     // move toc-ignore selectors from section div to header
     $('div.section.toc-ignore')
