--- a/schedule.html
+++ b/schedule.html
@@ -14,8 +14,8 @@
 
 <title>Schedule, Spring 2022</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -574,7 +574,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/25/2022</td>
-<td align="left">Work on final projects (PVA models due next week) (lab 5 due)</td>
+<td align="left">Work on final projects (PVA models due apr 6) (lab 5 due)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
