--- a/LECTURE12.html
+++ b/LECTURE12.html
@@ -14,8 +14,8 @@
 
 <title>Population Viability Analysis</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -459,14 +459,14 @@ div.tocify {
 
 <div id="final-projects" class="section level3">
 <h3>Final projects:</h3>
-<p>Just a heads up about <a href="FINAL_PROJECTS.html">final projects</a>. Your working PVA and a document justifying your modeling decisions is <em>due Friday, April 9</em>!</p>
+<p>Just a heads up about <a href="FINAL_PROJECTS.html">final projects</a>. Your working PVA and a document justifying your modeling decisions is <em>due Wed, April 6</em>!</p>
 </div>
 <div id="population-viability-analysis-pva" class="section level2">
 <h2>Population Viability Analysis (PVA)</h2>
 <p>Population Viability Analysis (PVA) integrates everything we have studied so far and more.</p>
 <p>At its most basic level, PVA is the <em>process of building and running a formal predictive population model for the purpose of gaining insight about present and future conservation status, or ranking alternative management options</em>.</p>
-<p><strong>Q:</strong> Does PVA align well with the small-population paradigm?</p>
-<p><strong>Q:</strong> Does PVA align well the declining-population paradigm?</p>
+<p><strong>Q:</strong> Does PVA align with the small-population paradigm?</p>
+<p><strong>Q:</strong> Does PVA align with the declining-population paradigm?</p>
 <p><strong>Q:</strong> Are PVA models always stochastic?</p>
 <p><strong>Q:</strong> Are PVA models always density-dependent?</p>
 <p><strong>Q:</strong> Are PVA models always age-structured?</p>
@@ -503,10 +503,10 @@ Labs 1,2,3,4,5</p>
 <h4>Step 2: Parameterize the demographic model!</h4>
 <p>Lecture 3: exponential growth<br />
 Lecture 4: density dependence<br />
-Lecture 5: allee effect<br />
+Lecture 5: allee effect (if applicable)<br />
 Lecture 7: matrix population models<br />
 Lecture 8: stochasticity and uncertainty<br />
-Labs 1,2,3,4,5,7</p>
+(Labs 1,2,3,4,5)</p>
 <p>This is where you attach real numbers to the stocks and flows in your conceptual life history diagram. Remember that these parameters are more than just survival and fecundity. It’s also:</p>
 <ul>
 <li>Annual variation in survival and fecundity (environmental stochasticity)<br />
@@ -515,7 +515,7 @@ Labs 1,2,3,4,5,7</p>
 </li>
 <li>Density dependence functions and parameters (including K)<br />
 </li>
-<li>Allee thresholds<br />
+<li>Allee threshold (if applicable)<br />
 </li>
 <li>Catastrophe effect sizes and probabilities<br />
 </li>
@@ -538,13 +538,13 @@ Lab 6: metapopulation models</p>
 </li>
 <li>Is environmental stochasticity <strong>spatially correlated</strong>? (is a bad year in one subpopulation likely to be a bad year in every subpopulation?)</li>
 <li>At what rate do individuals move among these populations?</li>
-<li>Can connectivity be enhanced via management?</li>
+<li>Can connectivity be enhanced via habitat management?</li>
 <li>Are dispersal rates density-dependent?</li>
 </ul>
 </div>
 <div id="step-4-simulate" class="section level4">
 <h4>Step 4: Simulate!</h4>
-<p>In class exercises, all labs</p>
+<p>(In class exercises, all labs)</p>
 <p>You know how to simulate populations now- you can choose whether it makes sense to use R, InsightMaker, Vortex, or some other software or programming platform for your simulations!</p>
 <p>Either way, you can be creative- set up the simulations so that they can help you answer your key research questions! You are in control- you can set up the simulations so that they give you the kinds of data you need!!</p>
 <ul>
@@ -715,7 +715,7 @@ plot(declines,declineprob,type=&quot;l&quot;,lwd=2,xlab=&quot;Decline threshold 
 abline(v=25,col=&quot;red&quot;,lwd=2)</code></pre>
 <p><img src="LECTURE12_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
 <p>What if our question is about the effect of flooding on extinction risk. Let’s imagine that the probability of flooding is not expected to change with climate change, but that the intensity of the flood damage is likely to increase substantially!</p>
-<p>Currently, floods generally result in a 10% population reduction. But climate change could increase this number to as much as 90%. Let’s look at how much this could increase extinction risk!</p>
+<p>Currently, floods generally result in a 25% population reduction. But climate change could increase this number to as much as 90%. Let’s look at how much this could increase extinction risk!</p>
 <pre class="r"><code># Plot extinction risk as a function of flood severity
 
 Exctinction_risk &lt;- function(simdata){
