--- a/PVA3_421.html
+++ b/PVA3_421.html
@@ -461,6 +461,8 @@ div.tocify {
 <h1>PVA for loggerhead turtles!</h1>
 <p>This PVA example, like the grizzly bear example, demonstrates the use of real demographic data in projecting a population into the future. We will use this PVA to do some management-relevant <strong>scenario testing</strong>.</p>
 <p>If you’d like to follow along in R, you can use <a href="PVA3_421.R">this script</a></p>
+<p>If you’d like to follow along in Excel, you can load the base Excel model <a href="Loggerhead2019.xlsx">here</a></p>
+<p>And here is the InsightMaker link we will use: <a href="https://insightmaker.com/insight/77078/Loggerhead-PVA-base-model">https://insightmaker.com/insight/77078/Loggerhead-PVA-base-model</a>.</p>
 <div id="constructing-a-demographic-matrix-model-data-for-loggerhead-turtles" class="section level2">
 <h2>Constructing a demographic (matrix) model data for loggerhead turtles</h2>
 <p>If you would like more background information on loggerhead turtles, visit these websites:</p>
@@ -472,24 +474,24 @@ div.tocify {
 <h3>Background</h3>
 <p><img src="loggerhead2.jpg" /></p>
 <p>The loggerhead sea turtle, <em>C. caretta</em>, is a large marine turtle with a nearly global distribution. Nesting areas in the USA occur along the Atlantic coast from New Jersey to Texas, although individuals may be observed along the Pacific coast and in Hawaii.</p>
-<p><img src="loggerhead4.jpg" /></p>
-<p>The species has been federally listed since 1978 (some population segments listed as “Threatened”, and others as “Endangered”. When a species is listed, the Endangered Species Act (ESA) requires that a recovery plan be drafted whose goal is to eventually remove the species from the list.</p>
-<p>Loggerheads are listed as “Threatened (Vulnerable)” under the IUCN Red List.</p>
 <p><img src="loggerhead3.jpg" /></p>
+<p><img src="loggerhead4.jpg" /></p>
+<p>The species has been federally listed since 1978 (some population segments listed as “Threatened”, and others as “Endangered”. When a species is listed, the Endangered Species Act (ESA) requires that a recovery plan be drafted whose goal is to eventually remove the species from the list. In this exercise we will imagine we are part of a team drafting the recovery plan for this species.</p>
+<p>Loggerheads are listed as “Threatened (Vulnerable)” under the IUCN Red List.</p>
 </div>
 <div id="threats" class="section level3">
 <h3>Threats</h3>
-<p>Biologists have identified two key types of threats facing loggerheads: alteration of nesting beaches and bycatch from commercial fisheries.</p>
+<p>Biologists have identified two major threats facing loggerheads: alteration of nesting beaches and bycatch from commercial fisheries.</p>
 <ol style="list-style-type: decimal">
 <li><strong>Threats to nesting beaches</strong></li>
 </ol>
 <p><img src="loggerhead5.jpg" /></p>
-<p>Adult females lay their eggs (ca. three nests every 2-3 years, up to 190 eggs/nest) on sandy beaches between April and September. Eggs incubate under the sand for about 2 months, and juveniles make a mad dash for the water upon hatching.<br />
+<p>Adult females lay their eggs (ca. three nests every 2-3 years, up to 190 eggs/nest) on sandy beaches between April and September. Eggs incubate under the sand for 2-3 months, and juveniles make a mad scramble for the water upon hatching.<br />
 Because beaches are popular sites for human recreation and development, arriving female turtles and hatchlings face risks including:</p>
 <ul>
 <li><em>poaching</em> (eggs or adults)</li>
 <li><em>beach erosion</em> or beach fortification to prevent erosion</li>
-<li><em>artificial lighting</em></li>
+<li><em>artificial lighting</em> (disorientation of hatchlings)</li>
 <li><em>recreational vehicles</em></li>
 <li>… and many others.</li>
 </ul>
@@ -498,7 +500,7 @@ Because beaches are popular sites for human recreation and development, arriving
 </ol>
 <p>Once hatchlings reach the ocean, they face different threats as they slowly develop to maturity.</p>
 <ul>
-<li>After the sargassum-feeding stage, loggerhead turtle juveniles, subadults and adults feed in coastal seagrass mats which are also frequented by shrimp boats and other inshore trawling vessels. Hence <em>accidental capture (“bycatch”)</em> and subsequent drowning in the nets and traps used by these vessels is common- especially for juveniles!</li>
+<li>After the sargassum-feeding stage, loggerhead turtle juveniles, subadults and adults feed in coastal seagrass mats which are also frequented by inshore shrimp trawling vessels. Hence <em>accidental capture (“bycatch”)</em> and subsequent drowning in the nets and traps used by these vessels is common- especially for juveniles!</li>
 </ul>
 <p><img src="trawl1.png" /></p>
 <ul>
@@ -508,15 +510,16 @@ Because beaches are popular sites for human recreation and development, arriving
 <li><strong>Additional threats</strong></li>
 </ol>
 <ul>
-<li><p>During cold temperatures turtles may go dormant, burying themselves in muddy bays and estuaries. While dormant they can be killed by periodic <em>dredging</em> to maintain bays and waterways.</p></li>
+<li><p>During colder temperatures turtles may go dormant, burying themselves in muddy bays and estuaries. While dormant they can be killed by periodic <em>dredging</em> to maintain bays and waterways.</p></li>
 <li><p>Human-produced debris (styrofoam peanuts, plastic bags, tar balls, and balloons) may cause <em>entanglement</em>, stranding, and drowning.</p></li>
 <li><p>Shallow swimming turtles may also collide with <em>boat propellers</em>.</p></li>
 <li><p>Toxins (<em>pesticides and heavy metals</em>) and oil spills may harm turtle physiology and decrease fecundity, but their impact has not been quantified.</p></li>
 <li><p>Finally, although rare in the US, <em>illegal harvest</em> of eggs as well as subadults and adults for meat, may occur frequently in the coastal Caribbean (Panama, Honduras). Turtle eggs are occasionally seen in open-air markets in Panama.</p></li>
 </ul>
+<p>Okay, let’s walk through the five stages of building a PVA model- this time focusing on the loggerhead sea turtle:</p>
 </div>
-<div id="step-1-a-size-structured-model" class="section level3">
-<h3>Step 1: a size-structured model</h3>
+<div id="step-1-a-stage-structured-model" class="section level3">
+<h3>Step 1: a stage-structured model</h3>
 <p>The loggerhead is a long-lived species – sexual maturity often doesn’t occur until animals are almost 30 years of age! The life cycle of the loggerhead is best described by distinct <strong>stage classes</strong> defined by body size (carapace length).</p>
 <p>Once turtle life-stages with similar vital rates have been identified, three pieces of data (collectively called <em>transition rates</em>) must be collected to construct the stage-structured model:</p>
 <ol style="list-style-type: decimal">
@@ -528,7 +531,7 @@ Because beaches are popular sites for human recreation and development, arriving
 <div id="step-2-parameterize-the-model" class="section level3">
 <h3>Step 2: parameterize the model</h3>
 <p>Transition rates for turtles and other species are often estimated on the basis of <em>capture-mark-recapture</em> (CMR) data.</p>
-<p>Here are some relevant parameters, from <a href="Crowder1994.pdf">this paper</a>:</p>
+<p>Here are some relevant parameters, from <a href="Crowder1994.pdf">this paper</a> (originally from Crouse et al. 1987):</p>
 <p><em>Transition from stage 1-2 (hatchling to small juvenile)</em>: 0.675<br />
 <em>Transition from stage 2-3 (small to large juvenile)</em>: 0.047<br />
 <em>Transition from stage 3-4 (large juvenile to subadult)</em>: 0.019<br />
@@ -537,12 +540,16 @@ Because beaches are popular sites for human recreation and development, arriving
 <em>Transition from stage 3-3 (stay large juvenile)</em>: 0.657<br />
 <em>Transition from stage 4-4 (stay subadult)</em>: 0.682<br />
 <em>Transition from stage 5-5 (stay adult)</em>: 0.809<br />
-<em>Transition from stage 4-1 (reproduction by subadults)</em>: 4.67<br />
-<em>Transition from stage 5-1 (reproduction by adults)</em>: 61.90</p>
-<p>For this model we will follow Crowder et al. in assuming no stochasticity or uncertainty in any of these parameters.</p>
+<em>Transition from stage 4-1 (reproduction by subadults)</em>: 4.67 (reflects transition probability and adult egg production)<br />
+<em>Transition from stage 5-1 (reproduction by adults)</em>: 61.90 (reflects adult survival and adult egg production)</p>
+<p>For this model we will follow Crowder et al. (1994) in assuming no stochasticity or uncertainty in any of these parameters.</p>
 </div>
-<div id="step-3-simulate" class="section level3">
-<h3>Step 3: simulate!</h3>
+<div id="step-3-spatial-structure" class="section level3">
+<h3>Step 3: spatial structure</h3>
+<p>None, we can skip this!</p>
+</div>
+<div id="step-4-simulate" class="section level3">
+<h3>Step 4: simulate!</h3>
 <p>We can project the loggerhead population into the future using <em>matrix multiplication</em>!</p>
 <p>We can do this using any number of tools- including R, Excel, or Insightmaker.</p>
 <p>See the end of this lecture for a review of matrix population models and how they work.</p>
@@ -606,12 +613,12 @@ axis(1,at=seq(1,nYears+1),labels = seq(0,nYears))   # label the axis
 legend(&quot;topright&quot;,col=cols,lwd=rep(2,3),legend=rownames(TMat),bty=&quot;n&quot;)  # put a legend on the plot</code></pre>
 <p><img src="PVA3_421_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
 <p>NOTE: here we use the term “survival” to refer to surviving and staying in the same stage class, and “growth” to refer to surviving and moving on to the next life stage.</p>
-<p>Look over the model, and make sure that you understand the inner workings!</p>
+<p>Look over the model, and make sure that you understand how it works before you start running conservation scenarios!</p>
 <div id="group-exercise-in-class-loggerhead-management" class="section level3">
 <h3>Group exercise (in class!): loggerhead management</h3>
-<p>Working in small groups if possible, investigate four management scenarios for the loggerhead turtle population:</p>
+<p>Working in small groups if possible, investigate the following four management scenarios for the loggerhead turtle population (see below). Remember to revert to the baseline model before trying the next management scenario.</p>
 <ol style="list-style-type: decimal">
-<li>Improve fecundity (labeled “Sub Fecundity” and “Adult Fecundity” in the IM model) via <em>nest-site protection</em>!
+<li>Improve fecundity (labeled “Sub Fecundity” and “Adult Fecundity” in the InsightMaker model) via <em>nest-site protection</em>!
 <ul>
 <li>Improve fecundity to 1.5X the current value<br />
 </li>
@@ -620,9 +627,9 @@ legend(&quot;topright&quot;,col=cols,lwd=rep(2,3),legend=rownames(TMat),bty=&quo
 </ul></li>
 <li>Improve hatchling survival (labeled “hatchling growth” in the IM model) via <em>nest monitoring</em>
 <ul>
-<li>Improve <em>to</em> 90%<br />
+<li>Improve <em>to</em> 0.9 (90%)<br />
 </li>
-<li>Improve <em>to</em> 100%<br />
+<li>Improve <em>to</em> 1 (100%)<br />
 </li>
 </ul></li>
 <li>Improve large juvenile survival (labeled “Lg Juv Surv” in the IM model) using <em>Turtle Excluder Devices (TEDs)</em>
@@ -634,9 +641,9 @@ legend(&quot;topright&quot;,col=cols,lwd=rep(2,3),legend=rownames(TMat),bty=&quo
 </ul></li>
 <li>Improve adult/subadult survival (labeled “Sub Surv” and “Adult Surv” in IM) by <em>restricting longline fisheries</em>.
 <ul>
-<li>Increase by 5% (add 0.05 to the existing subadult and adult survival)<br />
+<li>Add 0.05 to the existing subadult and adult survival<br />
 </li>
-<li>Increase by 10% (add 0.1 to the existing subadult and adult survival)</li>
+<li>Add 0.1 to the existing subadult and adult survival</li>
 </ul></li>
 </ol>
 <div class="figure">
@@ -648,15 +655,24 @@ legend(&quot;topright&quot;,col=cols,lwd=rep(2,3),legend=rownames(TMat),bty=&quo
 <li>The short-term outlook (4-6 years out)</li>
 <li>The long-term outlook (100 years out)</li>
 </ul>
+</div>
+<div id="step-5-results" class="section level3">
+<h3>Step 5: results!</h3>
+<p>Now that we have a parameterized model, we can communicate our results to stakeholders!!</p>
 <p><strong>Please write down your responses to the following questions:</strong>:</p>
 <p><strong>Short Answer Question #1</strong>: What is your management recommendation for this population? Why? [please take your time with this one]</p>
 <p><strong>Short Answer Question #2</strong>: In the base model, why does the population always seem to grow during the first few years of the simulation, even if the population ultimately declines over time?</p>
+<p>Bonus questions!</p>
+<p><strong>Bonus question #1</strong>: Under your chosen management recommendation, how long would it take the population to increase by one order of magnitude?</p>
+<p><strong>Bonus question #2</strong>: How might this time horizon change if you alter the initial age distribution (i.e., the fraction of the population in each of the stage classes at time 0)?</p>
 <p>And finally, let’s watch this video together: <a href="https://www.youtube.com/watch?v=F7j5yXnZo2Y">https://www.youtube.com/watch?v=F7j5yXnZo2Y</a>!</p>
 <div id="references" class="section level4">
 <h4>References</h4>
 <p>Mills, L. S., S. G. Hayes, C. Baldwin, M. J. Wisdom, J. Michael, J. Citta, D. J. Mattson, and K. Murphy. 1996. Factors Leading to Different Viability Predictions for a Grizzly Bear Data Set. Conservation Biology 10 (3), 863-873. doi: 10.1046/j.1523-1739.1996.10030863.x</p>
 <p>Morris, W. F. and D. F. Doak. 2002. Quantitative conservation biology: Theory and practice of population viability analysis. Sinauer, Sunderland, MA.</p>
 <p>Morris, W. F., D. F. Doak, M. Groom, P. Kareiva, J Fieberg, L. Gerber, P. Murphy, D. Thomson. 1999. A practical handbook for population viability analysis. The Nature Conservancy, Wash., DC.</p>
+<p><a href="Crowder1994.pdf">Crowder, L. B., Crouse, D. T., Heppell, S. S., &amp; Martin, T. H. (1994). Predicting the impact of turtle excluder devices on loggerhead sea turtle populations. Ecological applications, 4(3), 437-445.</a></p>
+<p>Crouse, D. T., Crowder, L. B., &amp; Caswell, H. (1987). A stage‐based population model for loggerhead sea turtles and implications for conservation. Ecology, 68(5), 1412-1423.</p>
 </div>
 <div id="optional-forecast-the-population-into-the-future-in-excel" class="section level4">
 <h4>Optional: Forecast the population into the future in Excel</h4>
